# dem-stitcher

./: .gitignore  .trufflehog.txt  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  aleutian_example_l.tif  aleutian_example_r.tif  environment.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/actions/: pytest-composite.yaml
.github/actions/pytest-automation/: action.yaml
.github/queries/: associated-pr.query.yml  pr-labels.query.yml
.github/workflows/: changelog.yml  distribute.yml  labeled-pr.yml  pypi-publish.yaml  pytest.yaml  release.yml  static-analysis.yml  tag.yml  test-and-tag.yml  test.yml  tests.yaml
dem_stitcher/: __init__.py  credentials.py  datasets.py  dateline.py  dem_readers.py  exceptions.py  geoid.py  geojson_io.py  glo_30_missing.py  merge.py  rio_tools.py  rio_window.py  stitcher.py
dem_stitcher/data/: glo_90_missing.geojson
environments/: environment-310.yml  environment-isce.yml
golden-datasets/los_angeles_tiles/: los_angeles_tile_1.tif
notebooks/: Basic_Demo.ipynb  Comparing DEMs.ipynb  Comparing_DEMs.ipynb  Demo.ipynb  Filling_in_missing_glo-30_tiles_with_glo-90_tiles.ipynb  Making a DEM for ISCE2.ipynb  Merging_DEM_Tiles_into_a_VRT.ipynb  Staging_a_DEM_for_ISCE2.ipynb
notebooks/analysis_and_comparison/: 0_Alignment_with_original_DEM_tiles.ipynb  1_Comparison_with_ISCE2_dem.ipynb
notebooks/organize_tile_data/: 0_Format_and_Organize_Data.ipynb  1_Missing_glo-30_tiles.ipynb  Format_and_Organize_Data.ipynb  README.md
notebooks_tile_data/: Format Data.ipynb  Format_Data.ipynb  README.md
src/dem_stitcher/: __init__.py  credentials.py  datasets.py  dateline.py  dem_readers.py  exceptions.py  geoid.py  geojson_io.py  merge.py  rio_tools.py  rio_window.py  stitcher.py
src/dem_stitcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_credentials.py  test_datasets.py  test_dateline.py  test_download_dem.py  test_exceptions.py  test_geoid.py  test_merge.py  test_missing.py  test_notebook.ipynb  test_notebooks.py  test_rio_tools.py  test_stitcher.py  test_window.py
tests/data/dateline/translate_datasets/: left.tif  right.tif
tests/data/golden_datasets/: egm_08_fairbanks.tif  egm_08_los_angeles.tif  fairbanks_dem_ellipsoid.tif  fairbanks_dem_geoid.tif  los_angeles_dem_ellipsoid.tif  los_angeles_dem_geoid.tif
tests/data/golden_datasets/fairbanks_tiles/: fairbanks_tile_0.tif
tests/data/golden_datasets/los_angeles_tiles/: los_angeles_tile_0.tif  los_angeles_tile_1.tif  los_angeles_tile_2.tif  los_angeles_tile_3.tif
tests/data/missing/: glo_30_left.tif  glo_90_right.tif  glo_merged.tif
tests/data/rio_tools/update_resolution/: res_one_deg.tif  res_quarter_deg.tif
tests/data/rio_window/: test_window.tif  test_window_unequal_dim.tif  warning_exception_data.tif  window_utm_0.geojson  window_utm_1.geojson  window_utm_2.geojson  window_utm_3.geojson
tests/data/stitcher/merge_tiles/: bl.tif  merged.tif  ul.tif  ur.tif
